# ai_assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  企业级AI知识助手Prompt.md
docs/: deployment.md  project-summary.md
src/enterprise_ai_assistant/: __init__.py  app.py  cli.py
src/enterprise_ai_assistant/agent/: __init__.py  exceptions.py  memory.py  prompts.py  service.py
src/enterprise_ai_assistant/api/: __init__.py  app.py  container.py  schemas.py
src/enterprise_ai_assistant/config/: __init__.py  settings.py
src/enterprise_ai_assistant/core/: __init__.py  logging.py
src/enterprise_ai_assistant/embedding/: __init__.py  dashscope.py  exceptions.py  protocols.py
src/enterprise_ai_assistant/llm/: __init__.py  dashscope.py  exceptions.py  protocols.py  tool_calling.py
src/enterprise_ai_assistant/models/: __init__.py  (+8 more)
tests/integration/: test_milvus_lite.py  test_rag_pipeline.py
tests/unit/: test_agent_memory.py  test_agent_models.py  test_api.py  test_app.py  test_chunking.py  test_cli.py  test_dashscope.py  test_dashscope_reranker.py  test_database_tool.py  test_document_loaders.py  test_embedding_dashscope.py  test_embedding_models.py  test_ingestion.py  test_llm_models.py  test_milvus_vectorstore.py  test_prompt_parser.py  test_prompt_registry.py  test_prompt_service.py  test_prompt_template.py  test_rag_service.py  test_react_agent.py  test_retriever.py  test_search_tool.py  test_settings.py  test_tool_models.py  test_tool_registry.py  test_vectorstore_models.py  test_weather_tool.py  test_workflow.py
(+36 files in other folders)
