[project]
name = "enterprise-ai-assistant"
version = "0.1.0"
description = "Enterprise AI knowledge assistant powered by DashScope, RAG and LangGraph"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "openai>=2.15,<3",
    "pydantic-settings>=2.7,<3",
    "structlog>=24.4,<26",
    "tenacity>=9,<10",
]

[project.scripts]
ai-assistant = "enterprise_ai_assistant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10,<26",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<8",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/enterprise_ai_assistant"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.pytest.ini_options]
addopts = "-q --strict-markers --cov=enterprise_ai_assistant --cov-report=term-missing"
testpaths = ["tests"]
